joetechsvc.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: dev
  name: joetechapp
spec:
  selector:
    app: joetechapp
  ports:
  - port: 80
    targetPort: 8080
