argocdingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   namespace: argocd
#   name: argocd-server-http
#   # annotations:
#   #   kubernetes.io/ingress.class: contour-internal
#   #   ingress.kubernetes.io/force-ssl-redirect: "true"
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: argocd.josephaggrey.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: argocd-server
#             port:
#               name: http
#   tls:
#   - hosts:
#     - internal.path.to.argocd.io
#     secretName: your-certificate-name

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   namespace: argocd
#   name: argoingress
#   labels:
#     name: argoingress
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: argocd.josephaggrey.com
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: argocd-server
#             port:
#               number: 80
# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argocd-server-ingress
#   namespace: argocd
#   annotations:
#     kubernetes.io/ingress.class: nginx
#     nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
#     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: argocd.josephaggrey.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: argocd-server
#             port:
#               number: 80

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: argocd-server-ingress
#   namespace: argocd
#   annotations:
#     cert-manager.io/cluster-issuer: letsencrypt-prod
#     kubernetes.io/ingress.class: nginx
#     kubernetes.io/tls-acme: "true"
#     nginx.ingress.kubernetes.io/ssl-passthrough: "true"
#     # If you encounter a redirect loop or are getting a 307 response code
#     # then you need to force the nginx ingress to connect to the backend using HTTPS.
#     #
#     nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
# spec:
#   rules:
#   - host: argocd.josephaggrey.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: argocd-server
#             port:
#               name: https
#   tls:
#   - hosts:
#     - argocd.josephaggrey.com
#     secretName: argocd-secret # do not change, this is provided by Argo CD

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-server-ingress
  namespace: argo-cd
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    # kubernetes.io/ingress.class: nginx
    kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
spec:
  ingressClassName: nginx
  rules:
    - host: argocd.joetechservices.com
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: argo-cd-server
                port:
                  number: 80
  tls:
    - hosts:
        - argocd.joetechservices.com
      secretName: argocd-secret
