joetecing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: dev
  annotations:
    # kubernetes.io/ingress.class: "nginx"
    # cert-manager.io/cluster-issuer: "letsencrypt-production"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    # kubernetes.io/ingress.class: nginx
   # kubernetes.io/tls-acme: 'true'
    nginx.ingress.kubernetes.io/ssl-passthrough: 'true'
    nginx.ingress.kubernetes.io/backend-protocol: 'HTTPS'
  name: joetechapp
  labels:
    app: joetechapp
spec:
  tls:
  - hosts:
    - www.joetechservices.com
    secretName: joecert
  ingressClassName: nginx
  rules:
  - host: www.joetechservices.com
    http:
      paths:
      - pathType: Prefix
        path: /*
        backend:
          service:
            name: joetechapp
            port:
              number: 80


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: myingress
#   labels:
#     name: myingress
# spec:
#   rules:
#   - host: <Host>
#     http:
#       paths:
#       - pathType: Prefix
#         path: "/"
#         backend:
#           service:
#             name: <Service>
#             port:
#               number: <Port>

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   annotations:
#     cert-manager.io/cluster-issuer: letsencrypt-production
#   creationTimestamp: "2023-04-06T01:51:37Z"
#   generation: 1
#   name: joetechapp
#   namespace: dev
# spec:
#   tls:
#   - secretName: joecert
#   - hosts:
#     - joe.joetechservices.com
#   ingressClassName: nginx
#   rules:
#   - host: joe.joetechservices.com
#     http:
#       paths:
#       - backend:
#           service:
#             name: joetechapp
#             port:
#               number: 80
#         path: /
#         pathType: Prefix
# # status:
# #   loadBalancer:
# #     ingress:
# #     - ip: 45.79.231.140
